# ngui

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  buildshim  bump-version.sh  config.h.in  configure  configure.ac  libtool  ngui.cpp  ngui.h  ngui_button.cpp  ngui_button.h  ngui_flowbox.cpp  ngui_info_prompt.cpp  ngui_stringselect.cpp  ngui_textbox.cpp  ngui_textbox.h  ngui_textlabel.cpp  ngui_textlabel.h  nsdl.c  nunifont.cpp  nunifont.h
build-aux/: generate-ChangeLog  update-debian-changelog
debian/: changelog.in  control  copyright  ngui-dev.install  rules
src/: ngui_flowbox.cpp  ngui_stringselect.cpp  ngui_textbox.cpp
src/ngui/: Makefile.am  Makefile.in  libngui.pc.in  ngui.cpp  ngui_scrollbar.cpp  ngui_textlabel.cpp  nsdl.cpp  nsdl.h  nunifont.cpp  uthash.h  widthmap_static.h
src/ngui/foo/usr/local/include/ngui/: ngui_button.h  nunifont.h
src/ngui/foo/usr/local/lib/pkgconfig/: libngui.pc
